--- a/Blik Mac/Base.lproj/MainMenu.xib
+++ b/Blik Mac/Base.lproj/MainMenu.xib
@@ -541,13 +541,25 @@ DQ
                                     <action selector="showHelp:" target="-1" id="y7X-2Q-9no"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Email Feedback or Support…" id="Erd-ek-tSW">
+                            <menuItem title="Feedback &amp; Support" enabled="NO" id="Erd-ek-tSW">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                            </menuItem>
+                            <menuItem title="Twitter…" id="SH4-UA-C0a">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
-                                    <action selector="openFeedbackEmail:" target="Voe-Tx-rLC" id="oTR-XG-lB5"/>
+                                    <action selector="openTwitterWebProfile:" target="Voe-Tx-rLC" id="U8T-l6-mEK"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Email…" id="G8k-YE-92V">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="openFeedbackEmail:" target="Voe-Tx-rLC" id="J1q-b8-Cjn"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="Dng-oA-Yu9"/>
+                            <menuItem title="Guides" enabled="NO" id="osq-b8-Hc4">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                            </menuItem>
                             <menuItem title="«Help Guides»" id="l1Z-1N-zjb">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                             </menuItem>
