--- a/Blik Mac/GLAProjectViewController.xib
+++ b/Blik Mac/GLAProjectViewController.xib
@@ -556,7 +556,7 @@
                                         <rect key="frame" x="1" y="39" width="287" height="36"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <textField verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" allowsExpansionToolTips="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wvd-37-nRU">
+                                            <textField verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" alphaValue="0.80000000000000004" allowsExpansionToolTips="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wvd-37-nRU">
                                                 <rect key="frame" x="-2" y="6" width="271" height="19"/>
                                                 <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="right" title="Table View Cell" id="3JX-zC-0E5">
                                                     <font key="font" size="11" name="AvenirNext-Medium"/>
