--- a/Blik Mac/NowWidgetViewController.xib
+++ b/Blik Mac/NowWidgetViewController.xib
@@ -12,7 +12,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <view id="D66-c2-5yW" userLabel="Main View">
+        <view id="D66-c2-5yW" userLabel="Main View" customClass="NowWidgetView" customModule="Blik" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="417" height="218"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
